--- a/app/globals.css
+++ b/app/globals.css
@@ -73,3 +73,7 @@ body,
     @apply bg-background text-foreground;
   }
 }
+
+.primaryBG {
+  @apply bg-[radial-gradient(ellipse_at_top,_var(--tw-gradient-stops))] from-sky-400 to-blue-800;
+}
